TestModalFragment.java TODO Необходимо изменить алгоритм записи в базу